# mmi-histone-ptm-analysis

./: .gitignore  Readme.md  main.py  pyproject.toml  requirement.txt  requirements.txt
00_mmi_pipeline/: 00_data_preprocessing.py  01_mmi_calculation.py  02_feature_selection.py  03_regression_prediction.py  README.md  config_loader.py  mmi_main.py  pipeline_config.yaml
01_pca_analysis/: eigen_decomposition.py  pca_components.py  pca_main_run.py
02_mmi_analysis/: mmi_entropy_values_from_input.py
03_regression_prediction_analysis/: all_predictoin_comparison.py
04_pseudo_inverse_analysis/: pseudo_invrs_main_run.py  r2_score_calcn_pseudo_inverse_based_feature.py
05_total_correlation_analysis/: lineplot_tc_and_mmi.py  tc_calculation.py
data/: Readme.md
datahandler/: Readme.md  (+3 more)
multivariate_utils/: pyproject.toml
multivariate_utils/multivariate_utils/: __init__.py  file_path_config.py
multivariate_utils/multivariate_utils/data_fitter/: multi_modal_fit_and_sample_generator.py
multivariate_utils/multivariate_utils/datahandler/: Readme.md  data_handler.py  data_preprocessor.py  dir_handler.py  path_handler.py  project_paths.py
multivariate_utils/multivariate_utils/feature_selector/: elastic_net_selection.py  mmi_feature_selection.py  omp_feature_selector.py
multivariate_utils/multivariate_utils/parallel_worker/: __init__.py  convienence_methods.py  executer.py  resource_checker.py  result_resources.py
multivariate_utils/multivariate_utils/predictor/: conditional_entropy.py  histone_mod_predictor.py  histone_mode_predictor_with_shap.py  pca_analyzer.py
(+1552 files in other folders)
