[project]
name = "multivariate-ptm-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "dhana56",email = "dhanasekharvk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "xgboost (>=3.1.3,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.50.0,<0.51.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "multivariate-utils @ file:///C:/Users/dhana/OneDrive/Desktop/coding_folder/mmi_histone_ptm_selection_analysis/multivariate_ptm_analysis/multivariate_utils",
    "psutil (>=7.2.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


